<resources>
    <string name="app_name">My first app</string>
    <string name="enter_messages">Enter messages</string>
    <string name="send_sms">send sms</string>
    <string name="open_sms">open sms</string>
    <string name="open_map">open map</string>
    <string name="check_sms">failed sms</string>
    <string name="sms_failed">failed sent sms</string>
    <string name="sms">sms</string>
    <string name="number">0612345678</string>
    <string name="sms_content">SMS content</string>
    <string name="contact_number">Contact number</string>
    <string name="delete">Delete</string>
    <string name="resent">resent</string>
    <string name="locate">locate</string>
    <string name="see_details">see details</string>
    <string name="sms_id">1</string>
    <string name="decrypt_sms">decrypt sms</string>

</resources>
