<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".smsDetailActivity"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/contact_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/contact_number" />

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_number"
            android:text="@string/number"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <TextView
            android:id="@+id/sms_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="75dp"
            android:text="@string/sms_content" />

        <TextView
            android:id="@+id/sms_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sms_content"
            android:text="@string/sms"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="203dp"
            android:text="@string/delete" />

        <Button
            android:id="@+id/resent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/delete"
            android:layout_marginTop="-203dp"
            android:text="@string/resent" />

        <Button
            android:id="@+id/locate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/resent"
            android:text="@string/locate" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>