<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_messages" />

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:inputType="" />

        <Button
            android:id="@+id/send_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location"
            android:layout_centerHorizontal="true"
            android:text="@string/send_sms" />

        <Button
            android:id="@+id/open_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/send_sms"
            android:layout_marginStart="0dp"
            android:text="@string/open_sms"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/check_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/open_sms"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp"
            android:text="@string/check_sms" />

        <Button
        android:id="@+id/open_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/check_sms"
        android:layout_marginStart="0dp"
        android:text="@string/open_map"
        android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
